make sure overflow: hidden

--- a/frontend/src/app/shared/modules/dynamic-widgets/components/widgets.common.scss
+++ b/frontend/src/app/shared/modules/dynamic-widgets/components/widgets.common.scss
@@ -59,6 +59,7 @@ $widgets-common-config: (
             display: flex;
             flex-direction: column;
             height: 100%;
+            overflow: hidden;
         
             .widget-title {
                 @include mat-typography-level-to-styles(map-get($app-fontface-config, sans), subheading-2);
